css/styles.css
/* General styling */

:root {
  --standard-font: "VT323", monospace;
  --normal: 400;
  --font-color: rgb(0, 0, 0);
  --font-color-inverse: rgb(255, 255, 255);
  --font-color-soft: rgba(0, 0, 0, 0.05);
  --overlay-yellow: rgba(255, 222, 0, 0.8);
  --overlay-yellow-noOpacity: rgb(255, 222, 0);
  --button-color: rgba(204, 0, 0, 0.85);
  --button-color-hover: rgb(204, 0, 0);
  --border-color: rgb(59, 76, 202);
  --header-height-small: 50px;
  --header-height-med: 70px;
  --header-height-big: 100px;
}

* {
  box-sizing: border-box;
}

@font-face {
  font-family: "VT323";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src:
    url(https://fonts.gstatic.com/s/vt323/v12/pxiKyp0ihIEF2isfFJXUdVNF.woff2)
    format("woff2");
  unicode-range:
    U+0000-00FF,
    U+0131,
    U+0152-0153,
    U+02BB-02BC,
    U+02C6,
    U+02DA,
    U+02DC,
    U+2000-206F,
    U+2074,
    U+20AC,
    U+2122,
    U+2191,
    U+2193,
    U+2212,
    U+2215,
    U+FEFF,
    U+FFFD;
}

code {
  font-family: "VT323", system-ui-monospace;
}

p {
  margin: 0 0 20px;
}

body {
  background: center / contain no-repeat fixed url(../img/logo.svg);
  height: 100vh;
  font-family: var(--standard-font);
  font-weight: var(--normal);
  font-size: 24px;
  color: var(--font-color);
}

@media all and (max-height: 480px) {
  body {
    background: none;
  }
}

@keyframes backgroundFade {
  0% {
    background-color: var(--overlay-yellow-noOpacity);
  }

  25% {
    background-color: var(--overlay-yellow-noOpacity);
  }

  100% {
    background-color: var(--overlay-yellow);
  }
}

#background-overlay {
  height: auto;
  min-height: 100vh;
  width: 100%;
  padding: 0;
  margin: 0;
  background-color: var(--overlay-yellow);
  animation: 4s backgroundFade;
}

.zoom-in {
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
}

/* Popup styling */

button:hover {
  cursor: pointer;
}

#popup-container {
  display: none;
}

#popup-container.is-visible {
  box-sizing: border-box;
  position: fixed;
  padding: 20px;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--overlay-yellow);
  z-index: 999;
  display: grid;
  text-align: center;
}

.popup {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: var(--button-color-hover);
  margin: auto;
  padding: 20px 20px 0;
  width: 100%;
  height: fit-content;
  max-width: 800px;
  max-height: 100%;
  border: 4px solid var(--border-color);
  border-radius: 3px;
  overflow: auto;
  box-shadow: 0 0 250px 2px rgba(0, 0, 0, 0.6);
}

.popup > p {
  margin: 0;
  padding-bottom: 30px;
  line-height: 1.5;
}

.popup > img {
  display: block;
  width: 50vw;
  margin-top: -20px;
  max-width: 300px;
  max-height: 300px;
  height: auto;
}

@media all and (max-width: 300px) {
  .popup > img {
    margin-top: 20px;
  }
}

.capitalize {
  text-transform: capitalize;
}

.popup > h1 {
  text-align: center;
  display: inline-block;
  margin: 30px 0 10px;
  padding: 0;
  text-transform: capitalize;
}

.popup > button {
  position: sticky;
  top: 0;
  right: 0;
  margin-left: auto;
  margin-right: 0;
  padding: 0;
  height: 30px;
  width: 30px;
  border: none;
  border-radius: 100%;
  background: var(--overlay-yellow-noOpacity);
  transition-duration: 0.2s;
}

.popup > button:hover {
  transform: scale(1.3);
}

@media all and (max-width: 280px) {
  b {
    display: block;
    padding-top: 10px;
  }
}

/* Header */

@keyframes headlineOpacity {
  from {
    color: var(--font-color);
  }

  to {
    color: var(--font-color-soft);
  }
}

header {
  position: fixed;
  top: 0;
  height: auto;
  width: 100%;
  padding: 0;
  margin: 0;
  text-align: center;
  transition: top 0.5s;
}

header > #headline-normal {
  margin: 30px 0;
  padding: 0;
  font-size: 100px;
  color: var(--font-color);
}

header > #headline-stretched {
  display: none;
}

@media all and (max-height: 480px) {
  header {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  header > #headline-stretched {
    display: block;
    height: auto;
    margin: 0;
    padding: 0;
    font-size: 18vw;
    color: var(--font-color-soft);
    animation: 6s headlineOpacity;
  }

  header > #headline-normal {
    display: none;
  }
}

/* Main */

main {
  margin: 0;
  padding: 0 10px;
  width: 100%;
  height: auto;
}

.pokemon-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: auto;
  min-height: calc(100vh - 175px);
  padding: 175px 0 10px;
  margin: 0;
  list-style-type: none;
}

@media all and (max-height: 480px) {
  .pokemon-list {
    padding: 0 0 10px;
    min-height: 100vh;
  }
}

.pokemon-list__item {
  margin: 10px 0;
  width: 80vw;
  max-width: 300px;
}

@media all and (max-width: 480px), (max-height: 480px) {
  .pokemon-list__item {
    max-width: 600px;
  }
}

.pokemon-list__item--button {
  background-color: var(--button-color);
  height: auto;
  min-height: 60px;
  width: 100%;
  padding: 2vh 0;
  color: inherit;
  text-transform: capitalize;
  border: 4px solid var(--border-color);
  border-radius: 3px;
  transition:
    width 0.25s,
    border-radius 0.25s,
    background-color 0.8s,
    color 0.8s;
}

@media all and (max-width: 480px), (max-height: 480px) {
  .pokemon-list__item--button {
    height: 90px;
  }
}

.pokemon-list__item--button:hover,
.pokemon-list__item--button:focus {
  background-color: var(--button-color-hover);
  width: 80%;
  color: var(--font-color-inverse);
  border-radius: 10px;
}

.loader {
  cursor: progress;
}

